--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>;
+"<rss version='2.0' >";
 <!doctype html>
 <html>
 <head>
@@ -49,6 +51,9 @@
         <div id="content">{% block content %}{% endblock %}</div>
         <footer class="footer">
             Watson - Made with love by CvTIC and his students
+             <a href="rss.xml" target="_blank">
+                <img src="images/feed-icon.png" style="height: 25px;">
+            </a>
         </footer>
     </div>
     
