--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -13,8 +13,8 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
         <ul class="nav nav-tabs nav-justified">
-            <li class="active"><a href="#links" data-toggle="tab">Links</a></li>
-            <li><a href="#users" data-toggle="tab">Users</a></li>
+            <li class="active"><a href="#links" class="adminview" data-toggle="tab">Links</a></li>
+            <li><a href="#users" class="adminview" data-toggle="tab">Users</a></li>
         </ul>
     </div>
 </div>
