--- a/views/result_tag.html.twig
+++ b/views/result_tag.html.twig
@@ -11,16 +11,20 @@
 			</p>
 		{% else %}
 			{% for link in links %}
-				<div class="col-md-4">
-				    <h2><a class="linkTitle" href="{{ path('link', { 'id': link.id }) }}">{{ link.title }}</a></h2>
-				    <p>{{ link.desc }}</p>
-				    <a href="{{ link.url }}" title="" target="_blank">Open ></a>
-				    <em>(by {{ link.user.username }})</em>
-				    {% for tag in link.tags %}
-				    	<a href="{{ path('tag', { 'id': tag.id }) }}" title="Filtrer">
-				    		{{ tag.title }}
-				    	</a>
-				    {% endfor %}
+				<div class="row border">
+				    <h2 class="col-md-4"><a class="linkTitle" href="{{ path('link', { 'id': link.id }) }}">{{ link.title }}</a></h2>
+				    <p class="col-md-4">{{ link.desc }}</p>
+					<div class="col-md-2">
+				    	<em>(by {{ link.user.username }})</em>
+				    	{% for tag in link.tags %}
+				    		<a href="{{ path('tag', { 'id': tag.id }) }}" title="Filtrer">
+				    			{{ tag.title }}
+				    		</a>
+				    	{% endfor %}
+					</div>
+					<div class="col-md-2">
+						<a href="{{ link.url }}" title="" target="_blank" class="btn btn-primary">Open ></a>
+					</div>
 				</div>
 			{% endfor %}
 		{% endif %}
