--- a/views/admin.html.twig
+++ b/views/admin.html.twig
@@ -23,7 +23,7 @@
         <a href="{{ path('admin_link_add') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Add link</button></a>
         {% if links %}
         <div class="table-responsive">
-            <table class="table table-hover table-condensed">
+            <table id="data_links" class="table table-hover table-condensed">
                 <thead>
                     <tr>
                         <th>Title</th>
@@ -72,7 +72,7 @@
         <a href="{{ path('admin_user_add') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Add user</button></a>
         {% if users %}
         <div class="table-responsive">
-            <table class="table table-hover table-condensed">
+            <table id="data_users" class="table table-hover table-condensed">
                 <thead>
                     <tr>
                         <th>Name</th>
