--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -61,5 +61,6 @@
     <script src="{{ app.request.basepath }}/lib/jquery/jquery.min.js"></script>
     <!-- JavaScript Boostrap plugin -->
     <script src="{{ app.request.basepath }}/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ app.request.basepath }}/lib/pagination/page.js"></script>
 </body>
 </html>
